Changelog
=========

1.1.3 (unreleased)
------------------

- Drop plone 4.2 support [Nachtalb]
- Fix obsolete information in README.rst [Nachtalb]


1.1.2 (2014-09-19)
------------------

- Use IDexterityContent instead of IDexterityItem to match all dexterity
  contents.
  [cedricmessiant]


1.1.1 (2014-09-05)
------------------

- Let ILastModifier fallback to the creator.
  [jone]


1.1.0 (2014-09-02)
------------------

- Drop Plone 4.1 support.
  [jone]

- Implement dexterity support.
  [jone]

- Implement an ILastModifier adapter.
  [jone]

- Implement uninstall for the package.
  [jone]


1.0.1 (2014-02-05)
------------------

- Cleanup package and declare dependencies.
  [jone]

- Fix maximum recursion depths in certain testing environments.
  This is caused by applying the patch multiple times when the ZCML is
  loaded multiple times.
  [jone]


1.0 (2012-08-15)
----------------

- Initial release